--- a/package.json
+++ b/package.json
@@ -52,11 +52,13 @@
     "@ant-design/pro-layout": "^6.9.0",
     "@ant-design/pro-table": "^2.17.0",
     "@umijs/route-utils": "^1.0.33",
+    "ahooks": "^2.10.5",
     "antd": "^4.15.0",
     "classnames": "^2.2.6",
     "lodash": "^4.17.11",
     "moment": "^2.25.3",
     "omit.js": "^2.0.2",
+    "puppeteer": "^10.0.0",
     "react": "^16.14.0",
     "react-dev-inspector": "^1.1.1",
     "react-dom": "^17.0.0",
